--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@ body {
     flex-direction: column;
   }
 
+  button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 6px 28px;
+    margin-top: 12px;
+    border: 0px;
+    border-radius: 8px;
+}
+
+/* hero */
+
 .hero {
     background-color: #1F2937;
     color: #F9FAF8;
@@ -64,14 +75,7 @@ ul {
     color: #bdbfc3;
 }
 
-button {
-    background-color: #3882F6;
-    color: #F9FAF8;
-    padding: 6px 28px;
-    margin-top: 12px;
-    border: 0px;
-    border-radius: 8px;
-}
+
 
 .hero-img {
     width: 500px;
@@ -81,4 +85,37 @@ button {
     align-items: center;
     background-color: #545658;
     color: #bdbfc3;
+}
+
+/* card container */
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    gap: 40px;
+}
+
+.card-header {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.card-main {
+    display: flex;
+    gap: 30px;
+}
+
+.card-content {
+    width: 150px;
+    color: #545658;
+}
+
+.card {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 8px;
+    margin-bottom: 8px;
 }
