--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&family=Urbanist:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&family=Urbanist:wght@300;400;500;600;700&display=swap');
 
 body {
     font-family: Roboto, sans-serif;
@@ -93,7 +93,8 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
+    padding-top: 40px;
+    padding-bottom: 80px;
     gap: 40px;
 }
 
@@ -118,4 +119,28 @@ ul {
     border: 3px solid #3882F6;
     border-radius: 8px;
     margin-bottom: 8px;
+}
+
+/* quote */
+
+.quote-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e5e7eb;
+}
+
+.quote {
+    margin: 60px;
+    width: 600px;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.author {
+    text-align:right;
+    font-size: 24px;
+    font-weight: 500;
+    font-style: normal;
 }
