--- a/style.css
+++ b/style.css
@@ -181,3 +181,15 @@ ul {
     border: 1px solid #ffffff;
     
 }
+
+
+/* footer */
+
+.footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+}
